--- a/source/less/blocks/container.less
+++ b/source/less/blocks/container.less
@@ -9,7 +9,13 @@
 @media (min-width: @desktop-width) {
   .container {
     &--desktop {
-    padding-left: 225px;
+    padding-left: 175px;
+    }
+
+    &--section {
+      max-width: 1050px;
+      margin-left: auto;
+      margin-right: auto;
     }
   }
 }
