--- a/source/less/style.less
+++ b/source/less/style.less
@@ -5,12 +5,14 @@
 @import "../less/blocks/button.less";
 @import "../less/blocks/contacts.less";
 @import "../less/blocks/container.less";
+@import "../less/blocks/copyright.less";
 @import "../less/blocks/form.less";
 @import "../less/blocks/main-footer.less";
 @import "../less/blocks/main-header.less";
 @import "../less/blocks/main-nav.less";
 @import "../less/blocks/main.less";
 @import "../less/blocks/map.less";
+@import "../less/blocks/modal.less";
 @import "../less/blocks/page.less";
 @import "../less/blocks/page-title.less";
 @import "../less/blocks/popular-product.less";
