--- a/source/less/blocks/contacts.less
+++ b/source/less/blocks/contacts.less
@@ -1,10 +1,19 @@
 .contacts {
-  padding-bottom: 39px;
+  padding-bottom: 40px;
 }
 
 .contacts__wrapper {
   padding-left: 30px;
   padding-right: 30px;
+}
+
+.contacts__title {
+  margin-top: 0;
+  margin-bottom: 26px;
+}
+
+.contacts__name {
+  margin-right: 33px;
 }
 
 .contacts__info {
@@ -14,29 +23,48 @@
   line-height: 30px;
   color: @dark-gray;
   list-style-type: none;
+
+  &--email {
+    margin-bottom: 29px;
+  }
 }
 
 .contacts__description-link {
   text-decoration: none;
   color: @dark-gray;
+  border-bottom: 1px solid #62d1ba;
+}
+
+.contacts__description-link:hover {
+  color: #46c1ae;
+  border-bottom: 1px solid #46c1ae;
+}
+
+.contacts__description-link:active {
+  color: #46c1ae;
+  border-bottom: 1px solid rgba(70, 193, 174, 0.1);
 }
 
 .contacts__container {
   display: flex;
   flex-direction: column;
+  margin-bottom: 64px;
 }
 
-.contacts__title {
-  padding-bottom: 28px;
-}
-
-.contacts__name {
-  min-width: 76px;
-}
 
 .contacts__info {
   display: flex;
   flex-direction: row;
+
+  &--address {
+    margin-left: -2px;
+  }
+}
+
+.contacts__description {
+  &--address {
+    margin-left: 4px;
+  }
 }
 
 .contacts__button-wrapper {
@@ -45,9 +73,33 @@
 
 
 @media (min-width: @tablet-width) {
+  .contacts {
+    position: relative;
+    padding-bottom: 60px;
+  }
+
+  .contacts::after {
+    position: absolute;
+    content: "";
+    top: 30px;
+    right: 53px;
+    width: 47px;
+    height: 81px;
+    background-image: url(../../img/icon-flag.svg);
+  }
+
+  .contacts__container {
+    margin-bottom: 48px;
+  }
+
   .contacts__wrapper {
     padding-left: 50px;
     padding-right: 50px;
+    padding-top: 52px;
+  }
+
+  .contacts__title {
+    margin-bottom: 48px;
   }
 
   .contacts__info {
@@ -55,6 +107,8 @@
   }
 
   .contacts__name {
+    min-width: none;
+    margin-right: 25px;
     font-size: 17px;
     line-height: 30px;
   }
@@ -62,6 +116,10 @@
   .contacts__description {
     font-size: 17px;
     line-height: 30px;
+
+    &--address {
+      margin-left: 2px;
+    }
   }
 
   .contacts__container {
@@ -72,23 +130,40 @@
   .contacts__button-wrapper {
     display: flex;
     justify-content: center;
+    padding: 0;
+  }
+
+  .contacts__button {
+    font-size: 17px;
   }
 }
 
 @media (min-width: @desktop-width) {
   .contacts {
+    position: relative;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+    padding-bottom: 50px;
+  }
+
+  .contacts::after {
+    top: 115px;
+    left: 64px;
   }
 
   .contacts__wrapper {
     padding: 0;
+    padding-top: 62px;
+  }
+
+  .contacts__title {
+    margin-bottom: 34px;
   }
 
   .contacts__container {
     flex-direction: column;
-    padding-right: 23px;
+    padding-right: 0;
   }
 
   .contacts__info {
@@ -101,6 +176,11 @@
 
   .contacts__button-wrapper {
     display: block;
-    margin-top: -95px;
+    margin-top: -108px;
+  }
+
+  .contacts__map {
+    margin-top: 54px;
+    margin-left: 13px;
   }
 }
