--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -14,15 +14,24 @@
 
 .main-nav__toggle {
   position: absolute;
-  top: -70px;
-  right: 0;
+  top: -58px;
+  right: 22px;
+  padding: 0;
   z-index: 2;
   display: block;
-  width: 70px;
-  height: 50px;
+  width: 30px;
+  height: 30px;
   background-color: inherit;
   cursor: pointer;
   border: none;
+}
+
+.main-nav__logo:hover {
+  opacity: 0.6;
+}
+
+.main-nav__logo:active {
+  opacity: 0.3;
 }
 
 .main-nav--closed .main-nav__toggle::before {
@@ -33,7 +42,7 @@
   width: 21px;
   height: 2px;
   background-color: @black;
-  box-shadow: 0 8px 0 0 @black, 0 16px 0 0 @black;
+  box-shadow: 0 6px 0 0 @black, 0 12px 0 0 @black;
 }
 
 .main-nav--opened {
@@ -42,16 +51,16 @@
 }
 
 .main-nav--opened .main-nav__toggle {
-  top: 0;
-  right: 0;
+  top: 10px;
+  right: 60px;
 
   &::before,
   &::after {
     content: "";
     position: absolute;
-    top: 24px;
-    left: 18px;
-    width: 20px;
+    top: 28px;
+    left: 35px;
+    width: 28px;
     height: 2px;
     background-color: @black;
   }
@@ -68,7 +77,7 @@
 
 @media (max-width: @mobile-width-only) {
   .main-nav__logo {
-    height: 59px;
+    height: 79px;
     padding-top: 22px;
     text-align: center;
   }
@@ -113,7 +122,7 @@
   }
 
   .main-nav__logo {
-    padding-top: 22px;
+    padding-top: 0;
   }
 
   .main-nav__logo img {
@@ -140,10 +149,11 @@
 
   .main-nav__site {
     order: 1;
+    margin-right: 18px;
   }
 
   .main-nav__logo {
-    padding-top: 8px;
+    padding-top: 0;
   }
 
   .main-nav__logo img {
@@ -153,6 +163,6 @@
 
   .main-nav__logo-container {
     order: 2;
-    margin-left: -50px;
+    margin-right: 80px;
   }
 }
