--- a/source/less/blocks/map.less
+++ b/source/less/blocks/map.less
@@ -21,7 +21,7 @@
   position: relative;
   display: block;
   margin: 0;
-  margin-bottom: 41px;
+  margin-bottom: 45px;
   padding: 0;
   width: 100%;
   height: 454px;
@@ -47,6 +47,7 @@
 @media (min-width: @tablet-width) {
   .map {
     height: 457px;
+    margin-bottom: 56px;
     background-image: url(../../img/map-tablet.jpg);
     background-size: cover;
 
@@ -65,6 +66,8 @@
   .map {
     width: 527px;
     height: 457px;
+    margin-top: 52px;
+    margin-left: 13px;
     background-image: url(../../img/map-desktop.jpg);
     background-size: cover;
 
