--- a/source/less/blocks/page.less
+++ b/source/less/blocks/page.less
@@ -4,6 +4,13 @@
   font-size: 15px;
   font-family: "Open Sans", "Arial", sans-serif;
   line-height: 30px;
+  box-sizing: border-box;
+
+  *,
+  *::after,
+  *::before {
+    box-sizing: inherit;
+  }
 }
 
 .page__body {
