--- a/source/less/blocks/product-process.less
+++ b/source/less/blocks/product-process.less
@@ -1,15 +1,39 @@
 .product-process {
-  padding-top: 20px;
-  padding-bottom: 20px;
+  margin-bottom: 58px;
+  padding-top: 10px;
   padding-left: 30px;
   padding-right: 30px;
 }
 
 .product-process__wrapper {
+  padding-bottom: 32px;
   border: 1px solid @light-gray;
 }
 
+.product-process__wrapper:hover {
+  box-shadow: 0px 6px 10px rgba(0, 0, 0, 0.1);
+}
+
+.product-process__wrapper:active {
+  box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.1);
+}
+
+.product-process__title-wrapper {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 26px;
+  padding-left: 34px;
+  padding-top: 20px;
+}
+
+.product-process__icon {
+  margin-right: 28px;
+}
+
 .product-process__title {
+  margin: 0;
   font-weight: 700;
   font-size: 17px;
   line-height: 24px;
@@ -17,15 +41,171 @@
 }
 
 .product-process__description {
+  margin: 0;
+  margin-bottom: 44px;
+  padding-left: 32px;
   font-size: 13px;
-  line-height: 30px;
+  line-height: 24px;
   color: @dark-gray;
 }
 
-@media (min-width: @tablet-width) {
-  .product-process__title {
-    font-size: 20px;
-  }
+.product-process__image-wrapper {
+  position: relative;
+  margin-bottom: 36px;
+}
+
+.product-process__link {
+  position: absolute;
+  content: "";
+  top: 37px;
+  left: 80px;
+  width: 100px;
+  height: 77px;
+  background-image: url(../../img/icon-play-mobile.svg);
+}
+
+.product-process__button {
+  margin-left: 34px;
+  margin-right: 34px;
+  width: 190px;
 }
 
 
+@media (min-width: @tablet-width) {
+  .product-process {
+    margin-bottom: 65px;
+    padding-top: 35px;
+    padding-left: 50px;
+    padding-right: 50px;
+  }
+
+  .product-process__wrapper {
+    display: flex;
+    flex-direction: column;
+    padding-bottom: 46px;
+  }
+
+  .product-process__image-wrapper {
+    order: 1;
+    margin-bottom: 38px;
+  }
+
+  .product-process__link {
+    top: 187px;
+    left: 282px;
+  }
+
+  .product-process__icon {
+    margin-right: 34px;
+  }
+
+  .product-process__title {
+    padding-top: 2px;
+  }
+
+  .product-process__title-wrapper {
+    justify-content: flex-start;
+    order: 2;
+    padding-top: 0;
+    padding-left: 40px;
+  }
+
+  .product-process__description {
+    order: 3;
+    margin-bottom: 42px;
+    padding-left: 38px;
+    padding-right: 38px;
+    font-size: 15px;
+    line-height: 30px;
+  }
+
+  .product-process__button {
+    order: 4;
+    margin-left: 42px;
+    margin-right: 42px;
+    padding-bottom: 16px;
+    width: 582px;
+    font-size: 17px;
+    line-height: 16px;
+  }
+
+  .product-process__title {
+    font-size: 20px;
+  }
+
+  .product-process__image {
+    width: 100%;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .product-process {
+    margin-bottom: 104px;
+    padding-left: 0;
+    padding-right: 0;
+  }
+
+  .product-process__wrapper {
+    display: grid;
+    grid-template-columns: 684px 367px;
+    grid-template-rows: 145px 148px 162px;
+    padding-bottom: 0;
+  }
+
+  .product-process__link {
+    top: 41.5%;
+    left: 42.5%;
+  }
+
+  .product-process__link:hover {
+    transform: scale(1.2);
+  }
+
+  .product-process__link:active {
+    transform: scale(0.8);
+    opacity: 0.6;
+  }
+
+  .product-process__title-wrapper {
+    grid-column: 2/3;
+    grid-row: 1/2;
+    flex-direction: column;
+    align-items: flex-start;
+    width: 178px;
+    margin: 0;
+    padding-top: 44px;
+    padding-left: 76px;
+  }
+
+  .product-process__icon {
+    margin-bottom: 27px;
+  }
+
+  .product-process__image-wrapper {
+    grid-column: 1/2;
+    grid-row: 1/4;
+    margin-bottom: 0;
+  }
+
+  .product-process__description {
+    grid-column: 2/3;
+    grid-row: 2/3;
+    margin-bottom: 0;
+    padding-top: 25px;
+    padding-left: 76px;
+  }
+
+  .product-process__button {
+    grid-column: 2/3;
+    grid-row: 3/3;
+    width: 230px;
+    margin-top: 50px;
+    margin-bottom: 60px;
+    margin-left: 78px;
+  }
+
+  .product-process__image {
+    min-width: 682px;
+    width: 65%;
+  }
+}
