--- a/source/less/blocks/form.less
+++ b/source/less/blocks/form.less
@@ -311,7 +311,7 @@
   .form__color-input:checked + .form__color-control {
     width: 38px;
     height: 38px;
-    background-image: url(../../img/icon-input-mobile.svg);
+    background-image: url(../img/icon-input-mobile.svg);
   }
 
   .form__title::after {
@@ -451,7 +451,7 @@
   .form__color-input:checked + .form__color-control {
     width: 52px;
     height: 52px;
-    background-image: url(../../img/icon-input-tablet.svg);
+    background-image: url(../img/icon-input-tablet.svg);
   }
 
   .form__container {
