--- a/source/less/blocks/map.less
+++ b/source/less/blocks/map.less
@@ -25,11 +25,11 @@
   padding: 0;
   width: 100%;
   height: 454px;
-  background-image: url(../../img/map-mobile.jpg);
+  background-image: url(../img/map-mobile.jpg);
   background-size: cover;
 
   @media (min-resolution: 2dppx) {
-    background-image: url(../../img/map-mobile@2x.jpg);
+    background-image: url(../img/map-mobile@2x.jpg);
   }
 
   &::after {
@@ -39,7 +39,7 @@
     height: 100px;
     top: 145px;
     left: 138px;
-    background-image: url(../../img/map-pin.svg);
+    background-image: url(../img/map-pin.svg);
   }
 }
 
@@ -48,11 +48,11 @@
   .map {
     height: 457px;
     margin-bottom: 56px;
-    background-image: url(../../img/map-tablet.jpg);
+    background-image: url(../img/map-tablet.jpg);
     background-size: cover;
 
     @media (min-resolution: 2dppx) {
-      background-image: url(../../img/map-tablet@2x.jpg);
+      background-image: url(../img/map-tablet@2x.jpg);
     }
 
     &::after {
@@ -68,11 +68,11 @@
     height: 457px;
     margin-top: 52px;
     margin-left: 13px;
-    background-image: url(../../img/map-desktop.jpg);
+    background-image: url(../img/map-desktop.jpg);
     background-size: cover;
 
     @media (min-resolution: 2dppx) {
-      background-image: url(../../img/map-desktop@2x.jpg);;
+      background-image: url(../img/map-desktop@2x.jpg);;
     }
 
     &::after {
