--- a/source/less/blocks/reviews.less
+++ b/source/less/blocks/reviews.less
@@ -93,13 +93,13 @@
     justify-content: space-between;
     padding-top: 80px;
     padding-bottom: 76px;
-    background-image: url(../../img/review-backgtound-tablet.jpg);
+    background-image: url(../img/review-backgtound-tablet.jpg);
     background-position: 0 0;
     background-repeat: no-repeat;
     background-size: 350px 457px;
 
     @media (min-resolution: 2dppx) {
-      background-image: url(../../img/review-backgtound-tablet2x.jpg);
+      background-image: url(../img/review-backgtound-tablet2x.jpg);
     }
   }
 
