--- a/source/less/blocks/contacts.less
+++ b/source/less/blocks/contacts.less
@@ -85,7 +85,7 @@
     right: 53px;
     width: 47px;
     height: 81px;
-    background-image: url(../../img/icon-flag.svg);
+    background-image: url(../img/icon-flag.svg);
   }
 
   .contacts__container {
