--- a/6/css/style.css
+++ b/6/css/style.css
@@ -290,7 +290,7 @@ img {
     right: 53px;
     width: 47px;
     height: 81px;
-    background-image: url(../../img/icon-flag.svg);
+    background-image: url(../img/icon-flag.svg);
   }
   .contacts__container {
     margin-bottom: 48px;
@@ -679,7 +679,7 @@ img {
   .form__color-input:checked + .form__color-control {
     width: 38px;
     height: 38px;
-    background-image: url(../../img/icon-input-mobile.svg);
+    background-image: url(../img/icon-input-mobile.svg);
   }
   .form__title::after {
     position: absolute;
@@ -793,7 +793,7 @@ img {
   .form__color-input:checked + .form__color-control {
     width: 52px;
     height: 52px;
-    background-image: url(../../img/icon-input-tablet.svg);
+    background-image: url(../img/icon-input-tablet.svg);
   }
   .form__container {
     display: flex;
@@ -1329,12 +1329,12 @@ img {
   padding: 0;
   width: 100%;
   height: 454px;
-  background-image: url(../../img/map-mobile.jpg);
+  background-image: url(../img/map-mobile.jpg);
   background-size: cover;
 }
 @media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 2dppx) {
   .map {
-    background-image: url(../../img/map-mobile@2x.jpg);
+    background-image: url(../img/map-mobile@2x.jpg);
   }
 }
 .map::after {
@@ -1344,13 +1344,13 @@ img {
   height: 100px;
   top: 145px;
   left: 138px;
-  background-image: url(../../img/map-pin.svg);
+  background-image: url(../img/map-pin.svg);
 }
 @media (min-width: 768px) {
   .map {
     height: 457px;
     margin-bottom: 56px;
-    background-image: url(../../img/map-tablet.jpg);
+    background-image: url(../img/map-tablet.jpg);
     background-size: cover;
   }
   .map::after {
@@ -1360,7 +1360,7 @@ img {
 }
 @media (min-width: 768px) and (-webkit-min-device-pixel-ratio: 2), (min-width: 768px) and (min-resolution: 2dppx) {
   .map {
-    background-image: url(../../img/map-tablet@2x.jpg);
+    background-image: url(../img/map-tablet@2x.jpg);
   }
 }
 @media (min-width: 1150px) {
@@ -1369,7 +1369,7 @@ img {
     height: 457px;
     margin-top: 52px;
     margin-left: 13px;
-    background-image: url(../../img/map-desktop.jpg);
+    background-image: url(../img/map-desktop.jpg);
     background-size: cover;
   }
   .map::after {
@@ -1379,7 +1379,7 @@ img {
 }
 @media (min-width: 1150px) and (-webkit-min-device-pixel-ratio: 2), (min-width: 1150px) and (min-resolution: 2dppx) {
   .map {
-    background-image: url(../../img/map-desktop@2x.jpg);
+    background-image: url(../img/map-desktop@2x.jpg);
   }
 }
 .modal {
@@ -2195,7 +2195,7 @@ img {
     justify-content: space-between;
     padding-top: 80px;
     padding-bottom: 76px;
-    background-image: url(../../img/review-backgtound-tablet.jpg);
+    background-image: url(../img/review-backgtound-tablet.jpg);
     background-position: 0 0;
     background-repeat: no-repeat;
     background-size: 350px 457px;
@@ -2243,7 +2243,7 @@ img {
 }
 @media (min-width: 768px) and (-webkit-min-device-pixel-ratio: 2), (min-width: 768px) and (min-resolution: 2dppx) {
   .reviews {
-    background-image: url(../../img/review-backgtound-tablet2x.jpg);
+    background-image: url(../img/review-backgtound-tablet2x.jpg);
   }
 }
 @media (min-width: 1150px) {
