--- a/source/less/blocks/page-title.less
+++ b/source/less/blocks/page-title.less
@@ -24,7 +24,7 @@
     height: 24px;
     bottom: 0;
     left: 0;
-    background-image: url(../../img/zigzag-line-white-tablet.svg);
+    background-image: url("../img/zigzag-line-white-tablet.svg");
   }
 
   .page-title__text {
@@ -44,6 +44,6 @@
 
   .page-title::after {
     height: 34px;
-    background-image: url(../../img/zigzag-line-white-desktop.svg);
+    background-image: url("../img/zigzag-line-white-desktop.svg");
   }
 }
