--- a/source/less/blocks/popular-product.less
+++ b/source/less/blocks/popular-product.less
@@ -101,7 +101,7 @@
   .popular-product::after {
     bottom: 0;
     height: 6px;
-    background-image: url(../../img/zigzag-line-mobile.svg);
+    background-image: url("../../img/zigzag-line-mobile.svg");
   }
 }
 
@@ -152,19 +152,19 @@
     padding-top: 6px;
     padding-right: 24px;
     line-height: 17px;
-    text-align: center
+    text-align: center;
   }
 
   .popular-product__parametr {
     width: 100px;
-}
+  }
 
   .popular-product__description {
     margin-bottom: 48px;
     padding-bottom: 0;
     font-size: 17px;
     line-height: 30px;
-}
+  }
 
   .popular-product__price {
     margin-bottom: 34px;
@@ -183,7 +183,7 @@
   .popular-product::after {
     bottom: 0;
     height: 17px;
-    background-image: url(../../img/zigzag-line-tablet.svg);
+    background-image: url("../img/zigzag-line-tablet.svg");
   }
 
   .popular-product__image-wrapper {
@@ -209,8 +209,10 @@
   }
 
   .popular-product::after {
-    width: 1050px;
-    left: 50px;
+    bottom: 0;
+    left: 0;
+    height: 23px;
+    background-image: url("../../img/zigzag-line-gray-desktop.svg");
   }
 
   .popular-product__image-wrapper {
@@ -243,12 +245,5 @@
 
   .popular-product__description {
     margin-bottom: 60px;
-  }
-
-  .popular-product::after {
-    bottom: 0;
-    left: 0;
-    height: 23px;
-    background-image: url(../../img/zigzag-line-gray-desktop.svg);
   }
 }
