--- a/source/less/blocks/product-process.less
+++ b/source/less/blocks/product-process.less
@@ -11,11 +11,11 @@
 }
 
 .product-process__wrapper:hover {
-  box-shadow: 0px 6px 10px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 6px 10px rgba(0, 0, 0, 0.1);
 }
 
 .product-process__wrapper:active {
-  box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 3px 5px rgba(0, 0, 0, 0.1);
 }
 
 .product-process__title-wrapper {
@@ -61,7 +61,7 @@
   left: 80px;
   width: 100px;
   height: 77px;
-  background-image: url(../../img/icon-play-mobile.svg);
+  background-image: url("../img/icon-play-mobile.svg");
 }
 
 .product-process__button {
@@ -101,6 +101,7 @@
 
   .product-process__title {
     padding-top: 2px;
+    font-size: 20px;
   }
 
   .product-process__title-wrapper {
@@ -127,10 +128,6 @@
     width: 582px;
     font-size: 17px;
     line-height: 16px;
-  }
-
-  .product-process__title {
-    font-size: 20px;
   }
 
   .product-process__image {
