--- a/source/less/blocks/main-header.less
+++ b/source/less/blocks/main-header.less
@@ -2,31 +2,20 @@
   max-width: 1150px;
   min-width: 320px;
   margin: 0 auto;
-  border-bottom: 1px solid rgba(0,0,0,0.2);
+  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
 }
 
 
 @media (min-width: @tablet-width) {
   .main-header--catalog {
     position: relative;
-    border: none;
-    background-color: @light-gray;
-  }
-
-  .main-header--catalog {
     content: "";
     top: 0;
     left: 0;
     width: 100%;
     height: 88px;
     background-color: @white;
+    border: none;
     border-bottom: 1px solid @gray;
   }
-
-
-}
-
-@media (min-width: @desktop-width) {
-
-
 }
