--- a/source/less/blocks/main.less
+++ b/source/less/blocks/main.less
@@ -7,7 +7,7 @@
   justify-content: center;
   height: 280px;
   background-color: #f9f9f9;
-  background-image: url(../img/background-mobile.jpg);
+  background-image: url("../img/background-mobile.jpg");
   background-repeat: no-repeat;
   background-position: center;
 }
@@ -28,6 +28,7 @@
 
 .main__item {
   font-family: "Open Sans", "Arial", sans-serif;
+
   &--interior {
     background-color: @turquoise-light;
   }
@@ -87,7 +88,6 @@
       padding-right: 27px;
     }
   }
-
 }
 
 @media (min-width: @tablet-width) {
@@ -99,7 +99,7 @@
   .main::after {
     position: absolute;
     content: "";
-    background-image: url(../img/zigzag-line-white-tablet.svg);
+    background-image: url("../img/zigzag-line-white-tablet.svg");
     width: 100%;
     height: 24px;
     bottom: 0;
@@ -109,13 +109,13 @@
   .main__image-wrapper {
     height: 626px;
     margin-top: -68px;
-    background-image: url(../img/index-background-tablet.jpg);
+    background-image: url("../img/index-background-tablet.jpg");
     background-position: 50% 2px;
     background-repeat: no-repeat;
     border-top: 1px solid @gray;
 
     @media (min-resolution: 2dppx) {
-      background-image: url(../img/index-background-tablet@2x.jpg);
+      background-image: url("../img/index-background-tablet@2x.jpg");
       background-size: 764px auto;
     }
   }
@@ -160,7 +160,7 @@
   .main::after {
     position: absolute;
     content: "";
-    background-image: url(../img/zigzag-line-desktop.svg);
+    background-image: url("../img/zigzag-line-desktop.svg");
     width: 100%;
     height: 34px;
     bottom: 0;
@@ -170,13 +170,13 @@
   .main__image-wrapper {
     margin: 0 auto;
     height: 628px;
-    background-image: url(../img/index-background-desktop.jpg);
+    background-image: url("../img/index-background-desktop.jpg");
     background-size: cover;
     margin-top: -70px;
     background-position: 50% -1px;
 
     @media (min-resolution: 2dppx) {
-      background-image: url(../img/index-background-desktop@2x.jpg);
+      background-image: url("../img/index-background-desktop@2x.jpg");
       background-size: 1150px auto;
     }
   }
