--- a/source/less/blocks/modal.less
+++ b/source/less/blocks/modal.less
@@ -1,5 +1,3 @@
-
-
 .modal {
   position: fixed;
   display: none;
@@ -8,8 +6,8 @@
   width: 320px;
   border: 1px solid #c6c6c6;
   background-color: @white;
-  box-shadow: 0px 5px 10px rgba(0, 1, 1, 0.25);
-  transform: translate(-50%,-50%);
+  box-shadow: 0 5px 10px rgba(0, 1, 1, 0.25);
+  transform: translate(-50%, -50%);
   z-index: 10;
 }
 
@@ -66,7 +64,7 @@
   padding: 16px 34px;
   font-size: 17px;
   line-height: 16px;
-  border: 2px solid rgba(4,4,4,0.1);
+  border: 2px solid rgba(4, 4, 4, 0.1);
 }
 
 .modal__item:last-child {
@@ -136,8 +134,4 @@
     padding-top: 20px;
     padding-bottom: 16px;
   }
-}
-
-@media (min-width: @desktop-width) {
-
 }
