исправления после первой защиты

--- a/source/less/style.less
+++ b/source/less/style.less
@@ -24,3 +24,4 @@
 @import "../less/blocks/title.less";
 @import "../less/blocks/user-list.less";
 @import "../less/blocks/user-sale.less";
+@import "../less/blocks/visually-hidden.less";
