--- a/source/less/blocks/product-process.less
+++ b/source/less/blocks/product-process.less
@@ -118,6 +118,7 @@
     padding-right: 38px;
     font-size: 15px;
     line-height: 30px;
+    overflow: auto;
   }
 
   .product-process__button {
