исправления после первой защиты по БЭМ

--- a/source/less/blocks/contacts.less
+++ b/source/less/blocks/contacts.less
@@ -138,6 +138,7 @@
     flex-direction: row;
     flex-wrap: wrap;
     padding-bottom: 50px;
+    padding-left: 175px;
   }
 
   .contacts::after {
