--- a/source/less/style.less
+++ b/source/less/style.less
@@ -19,6 +19,7 @@
 @import "../less/blocks/product-cards.less";
 @import "../less/blocks/product-process.less";
 @import "../less/blocks/reviews.less";
+@import "../less/blocks/section-container.less";
 @import "../less/blocks/site-list.less";
 @import "../less/blocks/social.less";
 @import "../less/blocks/title.less";
