исправления после 2й защиты

--- a/source/less/blocks/product-process.less
+++ b/source/less/blocks/product-process.less
@@ -146,13 +146,12 @@
   .product-process__wrapper {
     display: grid;
     grid-template-columns: 684px 367px;
-    grid-template-rows: 145px 148px 162px;
     padding-bottom: 0;
   }
 
   .product-process__link {
-    top: 41.5%;
-    left: 42.5%;
+    top: 190px;
+    left: 290px;
   }
 
   .product-process__link:hover {
